# telegram_cve_chatbot

./: Cargo.toml  README.md  bot_config.json  telegram_command_list.txt
src/: main.rs
src/logic/: chart_creator.rs  interface.rs  mod.rs  nist_api_client.rs  nist_api_structs.rs  pdf_creator.rs
src/persistence/: interface.rs
src/presentation/: console.rs  mod.rs  telegram.rs
tests/json_input/: cvss_v2.json  cvss_v31.json  invalid_cvss_version.json
