[package]
name = "telegram_cve_chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "*", features = ["json", "gzip", "deflate"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
serde_json = "1.0"
frankenstein = { version = "0.30", default-features = false, features = ["async-http-client"] }
plotters = "0.3.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
regex = "1.10.3"
